2011-06-19  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-edit.el: Specify file mode and coding.

2011-06-18  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-edit.el (mime-transfer-level): Fix wrong docstring.
	(mime-file-types): Set 'name' parameter of Content-Type field and
	'filename' parameter of Content-Disposition field.

2011-06-08  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-edit.el (mime-edit-insert-file): Encode a filename when
	FLIM does not support non-ASCII filename.
	(mime-edit-decode-single-part-in-buffer): Keep 'name' parameter of
	Content-Type field.  Unfold and decode it and 'filename' parameter
	of Content-Disposition field.

2010-12-18  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-view.el (mime-display-message): Do not hide button when
	first entity is neither text nor multipart.

2010-12-10  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-edit.el (mime-edit-decode-single-part-in-buffer): Keep
	Content-Id field.

2010-12-09  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-view.el (mime-preview-fill-flowed-text-delsp): New
	variable.
	(mime-display-text/plain): Handle "delsp=yes" if
	mime-preview-fill-flowed-text-delsp's value is non-nil.

2010-12-04  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-edit.el (mime-edit-pgp-get-signers): Widen before calling
	std11-field-body().  Check return value from std11-field-body().

2010-12-04  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-edit.el (mime-edit-pgp-get-signers): New function.
	(mime-edit-sign-pgp-mime, mime-edit-sign-pgp-nomime): Use it.

2010-12-02  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-edit.el (mime-edit-sign-pgp-mime): Fix "From:" header
	string is ignored when non-verbose mode and
	mime-edit-pgp-signers's value is nil.  Refined.
	(mime-edit-sign-pgp-nomime): Respect "From:" header string.
	Respect mime-edit-pgp-verbose's value.  Require epa.el.

2010-12-01  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* semi-def.el (mime-user-interface-product): Rename product name
	from SEMI to SEMI-EPG.
