@@ -1,3 +1,13 @@
+2011-06-23  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
+
+	* mime-epg.el (mime-verify-application/*-signature-internal): New
+	function.
+	(mime-verify-application/*-signature): Use it.
+	(mime-preview-application/*-signature): New function.
+
+	* semi-setup.el (Top): Setup mime-preview-application/*-signature
+	for previewing signature entity.
+
 2011-06-19  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
 
 	* mime-edit.el: Specify file mode and coding.
